--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "server": "json-server --watch db.json --port 5000",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -14,11 +15,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
     "antd": "^5.23.0",
+    "axios": "^1.7.9",
+    "lucide-react": "^0.469.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "react-table": "^7.8.0",
+    "react-toastify": "^11.0.2",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
@@ -27,11 +33,13 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
