--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "lucide-react": "^0.469.0",
@@ -22,9 +23,11 @@
     "react-data-table-component": "^7.6.2",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-table": "^7.8.0",
     "react-toastify": "^11.0.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
